--- a/Languages/Java/questions.json
+++ b/Languages/Java/questions.json
@@ -47,7 +47,7 @@
     },
     {
       "id": 5,
-      "question":"In an instance method or a constructor, 'this' is a reference to the current object?",
+      "question": "In an instance method or a constructor, 'this' is a reference to the current object?",
       "details": "this keyword refers to the current object in a method or constructor and helps to eliminate the confusion between class attributes and parameters with the same name",
       "questionType": "bool",
       "trueOrFalse": true,
@@ -56,7 +56,7 @@
     },
     {
       "id": 6,
-      "question":"Constructor overloading is not possible in Java?",
+      "question": "Constructor overloading is not possible in Java?",
       "details": "Java supports constructor overloading. Overloaded constructor is called based upon the parameters specified when new is executed.",
       "questionType": "bool",
       "trueOrFalse": false,
@@ -65,11 +65,39 @@
     },
     {
       "id": 7,
-      "question":"Java programming is not statically-typed, means all variables need not first be declared before they can be used.",
+      "question": "Java programming is not statically-typed, means all variables need not first be declared before they can be used.",
       "details": "Every variable in java needs to be declared first before use, else it throws compilation error",
       "questionType": "bool",
       "trueOrFalse": false,
       "shortAns": "No",
+      "tag": "Java"
+    },
+
+    {
+      "id": 8,
+      "question": " When an array is passed to a method, what does the method receive?",
+      "details": "When an array is passed to a method, a reference of the array is received by the method",
+      "questionType": "multi",
+      "trueOrFalse": false,
+      "shortAns": "The reference of the array",
+      "tag": "Java"
+    },
+    {
+      "id": 9,
+      "question": "compareTo() returns",
+      "details": "compareTo() returns an int value",
+      "questionType": "multi",
+      "trueOrFalse": false,
+      "shortAns": " an int value",
+      "tag": "Java"
+    },
+    {
+      "id": 10,
+      "question": " Where does the system stores parameters and local variables whenever a method is invoked?",
+      "details": "The system stores parameters and local vaiables in stack in java",
+      "questionType": "multi",
+      "trueOrFalse": false,
+      "shortAns": "Stack",
       "tag": "Java"
     }
   ]
