--- a/Languages/Java/questions.json
+++ b/Languages/Java/questions.json
@@ -99,6 +99,33 @@
       "trueOrFalse": false,
       "shortAns": " It is stored in stack.",
       "tag": "Java"
+    },
+        {
+      "id": 11,
+      "question":"What is the difference between String and String Builder?",
+      "details": "String is immutable datatype whereas String Builder is a mutable type",
+      "questionType": "multi",
+      "trueOrFalse": false,
+      "shortAns": "No",
+      "tag": "Java"
+    },
+    {
+      "id": 12,
+      "question":"How many different access modifiers are there in Java?",
+      "details": "There are four access modifiers namely default, public, private, and protected.",
+      "questionType": "multi",
+      "trueOrFalse": false,
+      "shortAns": "No",
+      "tag": "Java"
+    },
+    {
+      "id": 13,
+      "question":"What is an Exception?",
+      "details": " An Exception is a problem that can occur during the normal flow of execution of a program.",
+      "questionType": "multi",
+      "trueOrFalse": false,
+      "shortAns": "No",
+      "tag": "Java"
     }
   ]
 }
