--- a/Languages/Java/questions.json
+++ b/Languages/Java/questions.json
@@ -99,6 +99,33 @@
       "trueOrFalse": false,
       "shortAns": " It is stored in stack.",
       "tag": "Java"
+    },
+        {
+      "id": 11,
+      "question": "String is a mutable Datatype",
+      "details": "String is an immutable datatype",
+      "questionType": "bool",
+      "trueOrFalse": false,
+      "shortAns": "No",
+      "tag": "Java"
+    },
+    {
+      "id": 12,
+      "question": "What are Access Modifiers?",
+      "details": "The access modifiers in Java specifies the accessibility or scope of a field, method, constructor, or class.",
+      "questionType": "multi",
+      "trueOrFalse": false,
+      "shortAns": "It is used to specify accessibility of classes",
+      "tag": "Java"
+    },
+    {
+      "id": 13,
+      "question": "What is an Exception?",
+      "details": " An Exception is a problem that can occur during the normal flow of execution of a program.",
+      "questionType": "multi",
+      "trueOrFalse": false,
+      "shortAns": "It is a problem that occurs while running the program",
+      "tag": "Java"
     }
   ]
 }
