--- a/Languages/HTML5/questions.json
+++ b/Languages/HTML5/questions.json
@@ -2,30 +2,19 @@
   "questions": [
     {
       "id": 0,
-      "question": "Please input a "What Is" question relevant to your language here.",
+      "question": "Are the HTML tags and elements the same thing? ...",
       "details": "Expanded information on the correct answer to the question goes here.",
       "questionType": "multi",
       "trueOrFalse": false,
       "shortAns": "Please input a short ''It is'' Ans to the question above here that ends with punctuation.",
-      "tag": "Your qestion's subject Here"
+      "tag": "HTML 5"
     },
     {
       "id": 1,
-      "question": "What is a dog?",
-      "details": "The dog is characterized by an upturning tail. The dog derived from an ancient, extinct wolf, and the modern grey wolf is the dog's nearest living relative.",
-      "questionType": "multi",
-      "trueOrFalse": false,
-      "shortAns": "It is a domesticated descendant of the wolf.",
-      "tag": "pet"
-    },
-    {
-      "id": 2,
-      "question": "Is a train characterized by a rail transport?",
-      "details": "It is a form of transport consisting of a series of connected vehicles that generally run along a railroad track to transport passengers or cargo. The word train comes from the Old French trahiner, derived from the Latin trahere meaning "to pull, to draw". ",
-      "questionType": "bool",
-      "trueOrFalse": true,
-      "shortAns": "**NOTHING GOES HERE FOR BOOLEAN QUESTIONS"="",
-      "tag": "Transportation"
-    }
+      "question": "What are tags and attributes in HTML? ...",
+      "details": "tags",
+      "questionType": "multi"
+     
+    
   ]
 }
