--- a/Languages/Java/questions.json
+++ b/Languages/Java/questions.json
@@ -151,7 +151,7 @@
       "trueOrFalse": false,
       "shortAns": "It is a problem that occurs while running the program",
       "tag": "Java"
-    }
+    },
     {
       "id": 17,
       "question": "Does java uses inheritance?",
@@ -160,6 +160,25 @@
       "trueOrFalse": true,
       "shortAns": "Yes",
       "tag": "Java"
+    },
+    {
+      "id": 18,
+      "question": "Garbage collection is manual process.",
+      "details": "Java garbage collection is an automatic process.",
+      "questionType": "bool",
+      "trueOrFalse": false,
+      "shortAns": "No",
+      "tag": "Java"
+    },
+    {
+      "id": 19,
+      "question": "Is null a keyword in java?",
+      "details": "Null is a reserved keyword in the Java programming language. It's technically an object literal similar to True or False. ",
+      "questionType": "bool",
+      "trueOrFalse": true,
+      "shortAns": "Null is case sensitive, like any other keyword in Java. ",
+      "tag": "Java"
     }
+
   ]
 }
